<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searchLayout">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:layout_editor_absoluteX="12dp">

        <RadioGroup
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <TextView
                android:id="@+id/tipoLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/tipo" />

            <RadioButton
                android:id="@+id/newsRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/news" />

            <RadioButton
                android:id="@+id/tweetsRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/tweets" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup1"
            tools:layout_editor_absoluteX="93dp">

            <TextView
                android:id="@+id/sortLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/sort" />

            <RadioButton
                android:id="@+id/recentRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/recents" />

            <RadioButton
                android:id="@+id/relevancyRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary"
                android:text="@string/relevancy" />
        </RadioGroup>

        <TextView
            android:id="@+id/tweets2Return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/tweets2Return"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>